# abstract-retriever

./: .env.example  .gitignore  LICENCE  README.md  example.py  requirements.txt  setup.py
abstract_retriever/: __init__.py  cache.py  utils.py
abstract_retriever/abstract_parsers/: abstract_parser.py  abstract_stealth_parser.py  acm_digital_library_parser.py  aip_publishing_parser.py  arxiv_parser.py  asm_parser.py  biomedcentral_parser.py  content_ios_press_parser.py  ebooks_ios_press_parser.py  emerald_insight_parser.py  febs_parser.py  frontiers_in_energy_parser.py  hindawi_parser.py  ieee_parser.py  igi_global_parser.py  int_journal_of_maritime_engineering_parser.py  iop_science_parser.py  journals_physiology_parser.py  kns_cnki_parser.py  mdpi_parser.py  nature_parser.py  one_petro_parser.py  sage_journals_parser.py  science_direct_parser.py  (+11 more)
tests/: test_cache.py  test_utils.py
visualisation/: db.ipynb  main.py  main_backup.py  pyproject.toml
visualisation/nbs/: embeddings.ipynb  embeddings_for_topics.ipynb  embeddings_from_interviews.ipynb  embeddints_cleaned.ipynb  parse_scopus_abstract.ipynb  rerankers.ipynb  sqlite-vec-test.ipynb
visualisation/public/src/: scripts.js  style.css
visualisation/saari/: app.py  common.py  db.py
visualisation/saari/components/: __init__.py  general_ui.py  layout.py  login.py  paper.py  search.py  sidebar.py  study.py  umap.py
visualisation/saari/utils/: decorators.py  elsevier.py  paper.py  paper_old.py  search_guide.md  search_guide_small.md  umap.py
visualisation/saari/utils/.ipynb_checkpoints/: paper-checkpoint.py
(+36 files in other folders)
